crates/plotnik-tests/tests/02-parser/recovery_unexpected/comma_between_defs.txt
A = (a), B = (b)
------------------ DIAGNOSTICS -------------------
error: expected a pattern
 --> query.ptk:1:8
  |
1 | A = (a), B = (b)
  |        ^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
